--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "src"
   ],
   "devDependencies": {
+    "big.js": "^5.2.2",
+    "bignumber.js": "^9.0.0",
+    "decimal.js": "^10.2.0",
     "jest": "^24.9.0"
   },
   "scripts": {
